# LPC845FreeRTOS

./: .gitignore  .gitmodules  FreeRTOSConfig.h  README.md
demo/: CMakeLists.txt  Chip.cmake  ProjectBase.cmake
demo/SDK_2.8.0_LPC845/: LPC845_manifest_v3_6.xml
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/demo_apps/hello_world/: hello_world.c  readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/demo_apps/led_blinky/: readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/acomp/acomp_basic/: acomp_basic.c  acomp_basic.xml  readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/adc/lpc_adc_basic/: fsl_adc_basic.c
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/adc/lpc_adc_burst/: fsl_adc_burst.c  pin_mux.c
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/adc/lpc_adc_dma/: fsl_adc_dma.c
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/adc/lpc_adc_interrupt/: fsl_adc_interrupt.c  lpc_adc_interrupt.xml
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/capt/capt_acomp/: capt_acomp.c  capt_acomp.xml  pin_mux.c
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/capt/capt_basic/: capt_basic.c  capt_basic.xml
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/crc/: crc.xml  readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/ctimer/simple_match/: readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/ctimer/simple_match_interrupt/: readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/ctimer/simple_pwm_interrupt/: readme.txt  simple_pwm_interrupt.c
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/dac/lpc_dac_basic/: dac_basic.c  lpc_dac_basic.xml
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/dac/lpc_dac_dma/: dac_dma.c
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/dac/lpc_dac_interrupt/: dac_interrupt.c  readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/mrt/: mrt.c  mrt_example.xml  readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/wkt/: readme.txt
demo/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/wwdt/: wwdt.c  wwdt_example.xml
demo/SDK_2.8.0_LPC845/boards/lpcxpresso845max/demo_apps/hello_world/: hello_world.c
demo/SDK_2.8.0_LPC845/boards/lpcxpresso845max/demo_apps/safety_iec60730b/: freemaster_cfg.h  pin_mux.c  pin_mux.h  safety_cm0_lpc.c  safety_iec60730b.xml  safety_test_items.c  safety_test_items.h
demo/SDK_2.8.0_LPC845/boards/lpcxpresso845max/driver_examples/crc/: crc.c  crc.xml
demo/SDK_2.8.0_LPC845/boards/lpcxpresso845max/driver_examples/mrt/: mrt.c  mrt_example.xml
demo/SDK_2.8.0_LPC845/boards/lpcxpresso845max/freemaster_examples/fmstr_uart/: fmstr_example_uart.xml  freemaster_cfg.h
demo/SDK_2.8.0_LPC845/devices/LPC845/mcuxpresso/: LPC845_Project_Release.ld  LPC845_Project_Release_memory.ld
demo/source/: led_blinky.c
freertos_blinky/: .cproject  .gitignore  .project  CMakeLists.txt  ProjectBase.cmake  arm-none-eabi_Toolchain.cmake
freertos_blinky/source/: board_api.h  led_blinky.c
freertos_blinky_static/: .cproject  .gitignore  .project  CMakeLists.txt  ProjectBase.cmake
freertos_blinky_static/source/: FreeRTOSConfig.h  board.c  hooks.c  hooks.h  led_blinky.c
libs/SDK_2.8.0_LPC845/: SW-Content-Register.txt
libs/SDK_2.8.0_LPC845/boards/lpc845breakout/demo_apps/hello_world/: hello_world.xml
libs/SDK_2.8.0_LPC845/boards/lpc845breakout/demo_apps/led_blinky/: led_blinky.xml
libs/SDK_2.8.0_LPC845/boards/lpc845breakout/demo_apps/power_mode_switch_lpc/: power_mode_switch_lpc.c  power_mode_switch_lpc.xml  readme.txt
libs/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/crc/: crc.c
libs/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/wkt/: wkt.c  wkt_example.xml
libs/SDK_2.8.0_LPC845/boards/lpc845breakout/driver_examples/wwdt/: readme.txt
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/demo_apps/hello_world/: hello_world.xml
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/demo_apps/led_blinky/: led_blinky.c  led_blinky.xml
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/demo_apps/power_mode_switch_lpc/: power_mode_switch_lpc.c  power_mode_switch_lpc.xml
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/demo_apps/safety_iec60730b/: project_setup_lpcxpresso845max.c  project_setup_lpcxpresso845max.h  readme.txt  safety_cm0_lpc.h  safety_config.h
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/driver_examples/wkt/: wkt.c  wkt_example.xml
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/driver_examples/wwdt/: wwdt.c  wwdt_example.xml
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/freemaster_examples/fmstr_pdbdm/: fmstr_example_pdbdm.xml  freemaster_cfg.h  main.c  readme.txt
libs/SDK_2.8.0_LPC845/boards/lpcxpresso845max/freemaster_examples/fmstr_uart/: main.c  readme.txt
libs/SDK_2.8.0_LPC845/devices/LPC845/drivers/: fsl_clock.h
libs/SDK_2.8.0_LPC845/devices/LPC845/mcuxpresso/: LPC845_Project_Release_library.ld  startup_lpc845.c
(+331 files in other folders)
